{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 8,
  "lineage": "d8d65d55-3dc8-a1e8-93db-23874c4141e9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:091525943164:security-group/sg-07a4a2f8a94005c26",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-07a4a2f8a94005c26",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0bce87bfeb5d3e916"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d593311db5abb72b",
            "arn": "arn:aws:ec2:us-west-2:091525943164:instance/i-0c562f89544f0e134",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c562f89544f0e134",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_admin",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8edb1cdfba5478b",
            "private_dns": "ip-172-31-8-109.us-west-2.compute.internal",
            "private_ip": "172.31.8.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6af01390e6aeac8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_from_all",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaa1d5549302b50c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a6be7b852386b97",
              "sg-07a4a2f8a94005c26"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_admin",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:091525943164:security-group/sg-03a6be7b852386b97",
            "description": "Allow SSH port from all",
            "egress": [],
            "id": "sg-03a6be7b852386b97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_from_all",
            "name_prefix": "",
            "owner_id": "091525943164",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bce87bfeb5d3e916"
          }
        }
      ]
    }
  ]
}